# bril2riscv

./: Cargo.toml  README.md
bril-frontend/: Cargo.toml
bril-frontend/src/: json.rs  lib.rs
bril-ir/: Cargo.toml
bril-ir/src/: cfg.rs  lib.rs  ssa.rs
bril-passes/: Cargo.toml
bril-passes/src/: constant_folding.rs  constant_propagate.rs  constant_propagation.rs  deadcode_removal.rs  lib.rs  liveness.rs  pass_manager.rs
cli/: Cargo.toml
cli/src/: main.rs
riscv-backend/: Cargo.toml
riscv-backend/src/: instruction_sel.rs  lib.rs  machine_ir.rs  register_alloc.rs  riscv_emission.rs
tests/: add.bril  add.json  condition.bril  factorial.bril  factorial.json  palindrome.bril  palindrome.json  test.bril  test.json
