[package]
name = "bril2rv"
version = "0.1.0"
edition = "2024"

[workspace]
default-run = "cli"
members = [
    "bril-frontend",
    "bril-ir",
    "bril-passes",
    "riscv-backend",
    "cli",
]

[[bin]]
name = "cli"
path = "cli/src/main.rs"

[dependencies]
bril-frontend = { path = "bril-frontend" }
bril-ir       = { path = "bril-ir" }
bril-passes = { path = "bril-passes" }
riscv-backend = { path = "riscv-backend" }
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true

[dependencies.bril-rs]
version = "0.1.0"
path = "bril-extern/bril/bril-rs"
features = ["ssa", "memory", "float", "speculate", "position"]

[workspace.dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow     = "1.0"

